<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of Metronome.
  ~ Copyright (C) 2026 Philipp Bobek <philipp.bobek@mailbox.org>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Metronome is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="metronome">Metronome</string>
    <string name="beats_label">Beats</string>
    <string name="subdivisions_label">Subdivisions</string>
    <string name="tempo_label">Tempo in BPM</string>
    <string name="start_stop_button_description">Starts or stops the metronome</string>
    <string name="tap_tempo_button_description">Tap multiple times to set the tempo</string>
    <string name="increment_tempo_button_description">Increments the tempo</string>
    <string name="decrement_tempo_button_description">Decrements the tempo</string>
    <string name="tick_visualization_image_description">Tick visualization</string>
    <string name="navigate_back">Navigate back</string>
    <string name="notification_channel_playback_name">Playback</string>
    <string name="notification_channel_playback_description">Current metronome playback</string>
    <string name="notification_playback_title">Metronome is playing</string>
    <string name="notification_playback_action_stop_title">Stop</string>
    <string name="settings">Settings</string>
    <string name="emphasize_first_beat">Emphasize first beat</string>
    <string name="display">Display</string>
    <string name="night_mode">Theme</string>
    <string name="night_mode_follow_system">Follow system</string>
    <string name="night_mode_no">Light</string>
    <string name="night_mode_yes">Dark</string>
    <string name="sound">Sound</string>
    <string name="sound_square_wave">Hard beep</string>
    <string name="sound_sine_wave">Soft beep</string>
    <string name="sound_risset_drum">Synth drum</string>
    <string name="sound_pluck">Pluck</string>
    <string name="about">About</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="third_party_licenses">Third-party licenses</string>
    <string name="third_party_licenses_summary">Licenses of the open-source libraries used in this app.</string>
    <string name="source_code">Source code</string>
    <string name="version">Version</string>
    <string name="request_notifications_permission_rationale_title">We need permission to post notifications</string>
    <string name="request_notifications_permission_rationale_message">This app wants to post a notification as long as the metronome is running. You can then easily stop the metronome even if the app is running in the background.</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="tempo_marking_largo">Largo</string>
    <string name="tempo_marking_larghetto">Larghetto</string>
    <string name="tempo_marking_adagio">Adagio</string>
    <string name="tempo_marking_andante">Andante</string>
    <string name="tempo_marking_moderato">Moderato</string>
    <string name="tempo_marking_allegro">Allegro</string>
    <string name="tempo_marking_presto">Presto</string>
    <string name="tempo_marking_prestissimo">Prestissimo</string>
    <string name="source_code_name" translatable="false">GitHub</string>
    <string name="license_name" translatable="false">GNU GPLv3</string>
    <string name="author_name" translatable="false">Philipp Bobek</string>
</resources>
