/*
 * This file is part of Metronome.
 * Copyright (C) 2026 Philipp Bobek <philipp.bobek@mailbox.org>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Metronome is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

package com.bobek.metronome.ui

object TestConstants {
    const val LOADING_INDICATOR = "loading_indicator"
    const val CONTENT = "content"
    const val BEATS_SLIDER = "beats_slider"
    const val BEATS_EDIT = "beats_edit"
    const val SUBDIVISIONS_SLIDER = "subdivisions_slider"
    const val SUBDIVISIONS_EDIT = "subdivisions_edit"
    const val TEMPO_SLIDER = "tempo_slider"
    const val TEMPO_EDIT = "tempo_edit"
    const val TEMPO_MARKING_TEXT = "tempo_marking_text"
}
